Полный рефакторинг по фидбеку: внедрены DTO, роли, транзакции, Swagger и исправлена работа с JWT